# QuasiFit

./: Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac  quasifit.cpp  quasifit.hpp
binaries/: quasifit-linux-static-amd64  quasifit-linux-static-amd64-gmp  quasifit-linux-static-amd64-quad  quasifit-mac-static-amd64
m4/: boost.m4
misc/: defaults.cfg
scripts/: curateSample.m
src/: Makefile.am  console_buf.hpp  ezETAProgressBar.hpp  io.cpp  mcmc.cpp  quasifit.cpp  quasifit.hpp  vars.hpp
